--- a/src/app/account/profile/profile.component.html
+++ b/src/app/account/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
     <h1>User profile</h1>
     <p>LoggedInUser : {{userStatus.profile}}</p>
 </div>
